<?xml version="1.0"?>
<package format="3">
  <name>simple_ov</name>
  <version>0.0.0</version>
  <description>The simple_ov package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/simple_ov</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- ROS1: Dependencies needed to compile this package. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>
  <depend condition="$ROS_VERSION == 1">std_msgs</depend>
  <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 1">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 1">visualization_msgs</depend>
  <depend condition="$ROS_VERSION == 1">image_transport</depend>
  <depend condition="$ROS_VERSION == 1">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 1">ov_core</depend>
  <depend condition="$ROS_VERSION == 1">ov_init</depend>

  <!-- ROS2: Dependencies needed to compile this package. -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 2">tf2_geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 2">image_transport</depend>
  <depend condition="$ROS_VERSION == 2">ov_core</depend>
  <depend condition="$ROS_VERSION == 2">ov_init</depend>

  <!-- System dependencies for both versions -->
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>libopencv-contrib-dev</depend>
  <depend>boost</depend>
  <depend>libceres-dev</depend>

  <!-- Note the export is required to expose the executables -->
  <export>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
      <rosdoc config="rosdoc.yaml" />
  </export>
</package>
